--- a/react/src/index.css
+++ b/react/src/index.css
@@ -14,7 +14,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
+a  {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -67,4 +67,29 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
- */
+  */
+nav {
+  display: flex;
+  gap: 34px;
+  background-color: black;
+  color: white;
+}
+
+li {
+  list-style: none;
+  padding: 23px;
+}
+
+a li {
+  color: white;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.red {
+  background-color: red;
+  color: white;
+}
